<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="fav_btn">Favorites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now playing</string>
    <string name="song_name">Song name</string>
    <string name="song_artist">Song artist</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loadings</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equilizer_btn">Equilizer</string>
    <string name="timer_bnt">Timer</string>
    <string name="share_btn">Share</string>
    <string name="title_activity_playlist_details">PlaylistDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>