<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/mContainer"
    android:background="#191B28">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"
            android:scaleX="0.5"
            android:id="@+id/returnBtn"
            app:tint="#F2E4D8">
        </ImageButton>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/now_playing"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            tools:ignore="NestedWeights">
        </TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            android:background="@android:color/transparent"
            android:layout_marginEnd="30dp"

            app:tint="#BF7373">
        </ImageButton>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/images"
        android:id="@+id/cover_art"
        android:layout_weight="1">
    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:id="@+id/song_name"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_artist"
        android:id="@+id/song_artist"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_prev"
            android:backgroundTint="#393858"
            android:id="@+id/prevBtn"
            app:iconSize="40dp"
            app:iconTint="@color/white">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="86dp"
            android:layout_height="93dp"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="#393858"
            app:icon="@drawable/ic_pause"
            android:id="@+id/playPauseBtn"
            app:iconSize="40dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            app:iconTint="@color/white">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_skip_next"
            android:id="@+id/nextBtn"
            android:backgroundTint="#393858"
            app:iconSize="40dp"
            app:iconTint="@color/white">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:id="@+id/duration_played"
            android:text="@string/start_tv"
            android:gravity="center">
        </TextView>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:progressBackgroundTint="@color/white"
            android:id="@+id/seekBar"
            android:progress="@integer/material_motion_duration_short_1">
        </androidx.appcompat.widget.AppCompatSeekBar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:id="@+id/duration_total"
            android:text="@string/end_tv"
            android:gravity="center">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat"
            android:id="@+id/repeatBtn"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1">
        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            android:contentDescription="@string/timer_bnt"
            android:layout_weight="1">
        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1">
        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle"
            android:id="@+id/shuffleBtn"
            android:contentDescription="@string/shuffle_btn"
            android:layout_weight="1">
        </ImageView>
    </LinearLayout>
</LinearLayout>